--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-# Eclipse
-.classpath
-.project
-.settings/
-
-# Intellij
-.idea/
-*.iml
-*.iws
-
 # Mac
 .DS_Store
 
-# Maven
-log/
-target/
+# Idea
+.idea/
+
+# Intellij
+out/
+
+#Gradle
+.gradle/
+build/
+
+#JAR MANIFEST
+META-INF/
