--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
 plugins {
+    id 'com.github.johnrengelman.shadow' version '5.0.0'
     id 'java'
     id 'maven-publish'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.31'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.avs.filmoteca.App'
+        )
+    }
 }
 
 group = 'com.avs'
@@ -10,17 +20,29 @@ sourceCompatibility = '1.8'
 
 sourceCompatibility = 1.8
 
-
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.squareup.retrofit2:converter-scalars:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'io.reactivex:rxjava:1.2.2'
-    compile 'org.jsoup:jsoup:1.10.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile 'junit:junit:3.8.1'
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'io.reactivex:rxjava:1.2.2'
+    implementation 'org.jsoup:jsoup:1.10.1'
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
